add credits to modules
